Remove flex , add class uq-table, review amends

--- a/packages/storybook-html/src/components/table/table.docs.mdx
+++ b/packages/storybook-html/src/components/table/table.docs.mdx
@@ -28,7 +28,7 @@ For instance when there is more content to the left, a transparent shadow appear
 ```html
 <h3>Table - Basic tags with minimal classes</h3>
 <div class="uq-table__wrapper">
-    <table>
+    <table class="uq-table">
         <caption>Types of food and ratings</caption>
         <thead>
             <tr>
@@ -172,7 +172,7 @@ Accessibility in tables can be acheived to an extend by following some or part o
 `row` - specifies that the cell is a header for a row. 
 -->
 <div class="uq-table__wrapper">
-    <table>
+    <table class="uq-table">
         <caption>Types of food and ratings</caption>
         <thead>
             <tr>
@@ -221,7 +221,7 @@ Accessibility in tables can be acheived to an extend by following some or part o
 `rowgroup` - specifies that the cell is a header for a group of rows.
 -->
 <div class="uq-table__wrapper">
-    <table>
+    <table class="uq-table">
         <caption>Types of food and ratings</caption>
         <col>
         <colgroup span="2"></colgroup>
@@ -277,7 +277,7 @@ Accessibility in tables can be acheived to an extend by following some or part o
 `headers` - specifies the `<td>` cell with a headers attribute that lists the id values of the associated header cells.
 -->
 <div class="uq-table__wrapper">
-    <table>
+    <table class="uq-table">
         <caption>Types of food and ratings</caption>
         <col>
         <colgroup span="2"></colgroup>
