--- a/packages/storybook-html/src/components/core/colours.story.mdx
+++ b/packages/storybook-html/src/components/core/colours.story.mdx
@@ -1,8 +1,8 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
-<Meta title="Core/Colour" />
+<Meta title="Core/Colour/Colour Usage" />
 
-# Colour
+# Colour Usage
 
 - Purple is UQ’s identifying colour and should always lead.
 - Ensure the UQ colours are applied and reproduced consistently 
@@ -11,50 +11,56 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 $uq-purple: #51247A; 
 
-## UQ Colour Palette
+## text colours
 
-This section is provided for general reference, all specific colour guideance should be followed before using these values.
+We avoid solid black for text, it is too harsh on screens for reading. 
+Our current default text colour is created from a darkened Neutral <code>$uq-neutral-dark80</code>
 
-### Primary colours
-
-<table class="uqds-table">
+  <table class="uqds-table">
   <tbody class="uqds-table__body">
     <tr class="uqds-table__mobile-heading">
       <th class="uqds-table__heading">Example</th>
       <th class="uqds-table__heading">Name</th>
       <th class="uqds-table__heading">Variable</th>
-      <th class="uqds-table__heading">HEX</th>
-      <th class="uqds-table__heading">RGB</th>
       <th class="uqds-table__heading">Usage</th>
     </tr>
     <tr  class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--purple"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Purple</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#51247A</td>
-      <td class="uqds-table__item" data-title="RGB:">R81 G36 B122</td>
-      <td class="uqds-table__item" data-title="Usage:">Purple is UQ’s identifying colour</td>
-    </tr>
-    <tr class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--white"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ white</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-white</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#FFFFFF</td>
-      <td class="uqds-table__item" data-title="RGB:">R255 G255 B255</td>
-      <td class="uqds-table__item" data-title="Usage:">Primary UQ Colour</td>
-    </tr>
-    <tr class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--black"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ black</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-black</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#000000</td>
-      <td class="uqds-table__item" data-title="RGB:">R0 G0 B0</td>
-      <td class="uqds-table__item" data-title="Usage:">Primary UQ Colour</td>
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-text-color"></div></td>
+      <td class="uqds-table__item" data-title="Name:">Default text</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$text</code></td>
+      <td class="uqds-table__item" data-title="Usage:">Default text, Content</td>
     </tr>
   </tbody>
   </table>
 
-### Secondary colours
+## Background Gradient
+
+<div class="uqds-colour__palette uqds-colour__palette--large uqds-purple-gradient "></div>
+
+  <table class="uqds-table">
+  <tbody class="uqds-table__body">
+    <tr class="uqds-table__mobile-heading">
+      <th class="uqds-table__heading">Example</th>
+      <th class="uqds-table__heading">Name</th>
+      <th class="uqds-table__heading">Variable</th>
+      <th class="uqds-table__heading">Usage</th>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-purple-gradient"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Purple Gradient</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple-gradient</code></td>
+      <td class="uqds-table__item" data-title="Usage:">
+        <ul>
+          <li>87% Transition of UQ Purple to UQ purple light</li>
+          <li>used mainly for backgrounds</li>
+          <li>Typically reserved for offical header and footer</li>
+        </ul>
+      </td>
+    </tr>
+  </tbody>
+  </table>
+
+## Links 
 
   <table class="uqds-table">
   <tbody class="uqds-table__body">
@@ -67,75 +73,35 @@ This section is provided for general reference, all specific colour guideance sh
       <th class="uqds-table__heading">Usage</th>
     </tr>
     <tr  class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--purple-light"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Purple Light</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple-light</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#962A8B</td>
-      <td class="uqds-table__item" data-title="RGB:">rgb(150, 42, 139)</td>
-      <td class="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-link-color"></div></td>
+      <td class="uqds-table__item" data-title="Name:">Link color</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$link-color</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#2377cb</td>
+      <td class="uqds-table__item" data-title="RGB:"></td>
+      <td class="uqds-table__item" data-title="Usage:">Default link colour</td>
     </tr>
-    <tr class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--gold"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Gold</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-gold</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#BB9D65</td>
-      <td class="uqds-table__item" data-title="RGB:">rgb(187, 157, 101)</td>
-      <td class="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-link-active-color"></div></td>
+      <td class="uqds-table__item" data-title="Name:">Link active color</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$link-active-color</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#005ea5</td>
+      <td class="uqds-table__item" data-title="RGB:"></td>
+      <td class="uqds-table__item" data-title="Usage:">link active colour</td>
     </tr>
-    <tr class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--red"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Red</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-red</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#E62645</td>
-      <td class="uqds-table__item" data-title="RGB:">rgb(230, 38, 69)</td>
-      <td class="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
-    </tr>
-    <tr class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--orange"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Orange</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-orange</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#EB602B</td>
-      <td class="uqds-table__item" data-title="RGB:">rgb(235, 96, 43)</td>
-      <td class="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
-    </tr>
-    <tr class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--yellow"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Yellow</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-yellow</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#FBB800</td>
-      <td class="uqds-table__item" data-title="RGB:">rgb(251, 184, 0)</td>
-      <td class="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
-    </tr>
-    <tr class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--blue"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Blue</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-blue</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#4085C6</td>
-      <td class="uqds-table__item" data-title="RGB:">rgb(64, 133, 198)</td>
-      <td class="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
-    </tr>
-    <tr class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--aqua"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Aqua</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-aqua</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#00A2C7</td>
-      <td class="uqds-table__item" data-title="RGB:">rgb(0, 162, 199)</td>
-      <td class="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
-    </tr>
-    <tr class="uqds-table__row">
-      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--green"></div></td>
-      <td class="uqds-table__item" data-title="Name:">UQ Green</td>
-      <td class="uqds-table__item" data-title="Variable:"><code>$uq-green</code></td>
-      <td class="uqds-table__item" data-title="HEX:">#2EA836</td>
-      <td class="uqds-table__item" data-title="RGB:">rgb(46, 168, 54)</td>
-      <td class="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-link-hover-color"></div></td>
+      <td class="uqds-table__item" data-title="Name:">Link hover color</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$link-hover-color</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#005ea5</td>
+      <td class="uqds-table__item" data-title="RGB:"></td>
+      <td class="uqds-table__item" data-title="Usage:">link hover colour</td>
     </tr>
   </tbody>
   </table>
 
-### Neutral tones
+## Red Tints 
 
-<table class="uqds-table">
+  <table class="uqds-table">
   <tbody class="uqds-table__body">
     <tr class="uqds-table__mobile-heading">
       <th class="uqds-table__heading">Example</th>
@@ -146,12 +112,157 @@ This section is provided for general reference, all specific colour guideance sh
       <th class="uqds-table__heading">Usage</th>
     </tr>
     <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-red-dark20"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Red Dark 20</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-red-dark20</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#be1b38</td>
+      <td class="uqds-table__item" data-title="RGB:"></td>
+      <td class="uqds-table__item" data-title="Usage:">Red tint 20%</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-red-dark40"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Red Dark 40</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-red-dark40</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#9b1129</td>
+      <td class="uqds-table__item" data-title="RGB:"></td>
+      <td class="uqds-table__item" data-title="Usage:">Red tint 40%</td>
+    </tr>
+  </tbody>
+  </table>
+
+  ## Neutrals and Darks
+  Tints of our neutral tones can be used as a background colour.
+  
+  Recommended tints of the neutral tones are:
+  ### Neutral Tints and shades
+  The Neutrals are created from a base of <code>$uq-neutral</code>
+  <table class="uqds-table">
+  <tbody class="uqds-table__body">
+    <tr class="uqds-table__mobile-heading">
+      <th class="uqds-table__heading">Example</th>
+      <th class="uqds-table__heading">Name</th>
+      <th class="uqds-table__heading">Variable</th>
+      <th class="uqds-table__heading">HEX</th>
+      <th class="uqds-table__heading">RGB</th>
+      <th class="uqds-table__heading">Usage</th>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-light20"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Neutral tint 20</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-light20</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#f7f6f5</td>
+      <td class="uqds-table__item" data-title="RGB:">rgb(247, 246, 245), rgba(215, 209, 204, 0.2)</td>
+      <td class="uqds-table__item" data-title="Usage:">40% Tint</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-light40"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Neutral tint 40</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-light40</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#efedeb</td>
+      <td class="uqds-table__item" data-title="RGB:">rgb(239, 237, 235), rgba(215, 209, 204, 0.4)</td>
+      <td class="uqds-table__item" data-title="Usage:">40% Tint</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-light60"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Neutral tint 60</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-light60</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#e7e3e0</td>
+      <td class="uqds-table__item" data-title="RGB:">rgb(231, 227, 224), rgba(215, 209, 204, 0.6)</td>
+      <td class="uqds-table__item" data-title="Usage:">60% Tint</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-light80"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Neutral tint 80</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-light80</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#dfdad6</td>
+      <td class="uqds-table__item" data-title="RGB:">rgb(223, 218, 214), rgba(215, 209, 204, 0.8)</td>
+      <td class="uqds-table__item" data-title="Usage:">80% Tint</td>
+    </tr>
+    <tr  class="uqds-table__row">
       <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--neutral"></div></td>
       <td class="uqds-table__item" data-title="Name:">UQ Neutral</td>
       <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral</code></td>
       <td class="uqds-table__item" data-title="HEX:">#D7D1CC</td>
       <td class="uqds-table__item" data-title="RGB:">rgb(215, 209, 204)</td>
       <td class="uqds-table__item" data-title="Usage:">Neutral tones</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-dark20"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Neutral Dark 20</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-dark20</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#aca7a3</td>
+      <td class="uqds-table__item" data-title="RGB:"></td>
+      <td class="uqds-table__item" data-title="Usage:">20% Shade</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-dark40"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Neutral Dark 40</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-dark40</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#817d7a</td>
+      <td class="uqds-table__item" data-title="RGB:"></td>
+      <td class="uqds-table__item" data-title="Usage:">40% Shade</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-dark60"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Neutral Dark 60</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-dark60</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#565452</td>
+      <td class="uqds-table__item" data-title="RGB:"></td>
+      <td class="uqds-table__item" data-title="Usage:">60% Shade</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-neutral-dark80"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Neutral Dark 80</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-dark80</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#2b2a29</td>
+      <td class="uqds-table__item" data-title="RGB:"></td>
+      <td class="uqds-table__item" data-title="Usage:">80% Shade</td>
+    </tr>
+  </tbody>
+  </table>
+
+### Dark Grey Tints and Shades
+  <table class="uqds-table">
+  <tbody class="uqds-table__body">
+    <tr class="uqds-table__mobile-heading">
+      <th class="uqds-table__heading">Example</th>
+      <th class="uqds-table__heading">Name</th>
+      <th class="uqds-table__heading">Variable</th>
+      <th class="uqds-table__heading">HEX</th>
+      <th class="uqds-table__heading">RGB</th>
+      <th class="uqds-table__heading">Usage</th>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-darkgrey-light20"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Dark Grey Light 20</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-darkgrey-light20</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#ebeae9</td>
+      <td class="uqds-table__item" data-title="RGB:">rgb(235, 234, 233), rgba(153, 148, 144, 0.2)</td>
+      <td class="uqds-table__item" data-title="Usage:">20% Tint</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-darkgrey-light40"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Dark Grey Light 40</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-darkgrey-light40</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#d6d4d3</td>
+      <td class="uqds-table__item" data-title="RGB:">rgb(214, 212, 211), rgba(153, 148, 144, 0.4)</td>
+      <td class="uqds-table__item" data-title="Usage:">40% Tint</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-darkgrey-light60"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Dark Grey Light 60</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-darkgrey-light60</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#c2bfbc</td>
+      <td class="uqds-table__item" data-title="RGB:">rgb(194, 191, 188), rgba(153, 148, 144, 0.6)</td>
+      <td class="uqds-table__item" data-title="Usage:">60% Tint</td>
+    </tr>
+    <tr  class="uqds-table__row">
+      <td class="uqds-table__item"><div class="uqds-colour__palette uqds-darkgrey-light80"></div></td>
+      <td class="uqds-table__item" data-title="Name:">UQ Dark Grey Light 80</td>
+      <td class="uqds-table__item" data-title="Variable:"><code>$uq-darkgrey-light80</code></td>
+      <td class="uqds-table__item" data-title="HEX:">#ada9a6</td>
+      <td class="uqds-table__item" data-title="RGB:">rgb(173, 169, 166), rgba(153, 148, 144, 0.8)</td>
+      <td class="uqds-table__item" data-title="Usage:">80% Tint</td>
     </tr>
     <tr class="uqds-table__row">
       <td class="uqds-table__item"><div class="uqds-colour__palette uqds-colour--darkgrey"></div></td>
@@ -162,4 +273,5 @@ This section is provided for general reference, all specific colour guideance sh
       <td class="uqds-table__item" data-title="Usage:">Neutral tones</td>
     </tr>
   </tbody>
-</table>
+  </table>
+
