updated colour documentation and structure

--- a/packages/storybook-html/src/components/core/colours-base.story.mdx
+++ b/packages/storybook-html/src/components/core/colours-base.story.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
-<Meta title="Core/Colour/Base Colour palette" />
+<Meta title="Core/Colour/Base colour palette" />
 
 # Base Colour palette
 
