Colour doc updates

--- a/packages/storybook-html/src/components/core/colours-gradient.story.mdx
+++ b/packages/storybook-html/src/components/core/colours-gradient.story.mdx
@@ -1,8 +1,8 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
-<Meta title="Core/Colour/Purple Gradient" />
+<Meta title="Core/Colour/Purple gradient" />
 
-# Purple Gradient
+# Purple gradient
 
 The purple gradient is Typically reserved for the offical header and footer
 
