fixed colour doc feedback

--- a/packages/storybook-html/src/components/core/colours-base.story.mdx
+++ b/packages/storybook-html/src/components/core/colours-base.story.mdx
@@ -2,24 +2,24 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 <Meta title="Core/Colour/Base colour palette" />
 
-# Base Colour palette
+# Base colour palette
 
-To maintain brand consistency you should reference the utility colours provided using Variable names over actual colour values shuch as Hex or RGB. 
+To maintain brand consistency you should reference the utility colours provided using variable names over actual colour values shuch as Hex or RGB. 
 
 - Base colours are used to create all variations throughout the design system.
 - Do not create random colours, always start with a base colour reference.
 - Utility colour guidelines should be followed before using these values
 
 **Table of Content**
-- [UQ Brand Colours](#uq-brand-colours)
+- [UQ brand colours](#uq-brand-colours)
   - [Primary colours](#primary-colours)
   - [Secondary colours](#secondary-colours)
   - [Neutral tones](#neutral-tones)
-- [Custom Colours](#custom-colours)
+- [Custom colours](#custom-colours)
   - [link](#link)
-  - [Red Tints](#red-tints)
+  - [Red tints](#red-tints)
 
-## UQ Brand Colours
+## UQ brand colours
 
 These are the core brand colours for the University of Queensland.
 
@@ -175,7 +175,7 @@ Neutral tones can be used as a background colour.
   </tbody>
 </table>
 
-## Custom Colours
+## Custom colours
 
 ### Link
 
@@ -200,7 +200,7 @@ Neutral tones can be used as a background colour.
   </tbody>
   </table>
 
-### Red Tints 
+### Red tints 
 
   <table class="uqds-table">
   <tbody class="uqds-table__body">
