--- a/packages/storybook-html/src/components/core/colours-gradient.story.mdx
+++ b/packages/storybook-html/src/components/core/colours-gradient.story.mdx
@@ -34,7 +34,7 @@ It is recommended to always reference the provide variable and avoid creating cu
   </tbody>
   </table>
 
-## Gradient Direction
+## Gradient direction
 
 The purple gradient is used horizontally, <code>$uq-purple</code> left to <code>$uq-light-purple</code> right. 
 This is the preferred usage for most senarios, and helps maintain consistency across pages. 
