--- a/packages/storybook-html/src/components/core/colours.story.mdx
+++ b/packages/storybook-html/src/components/core/colours.story.mdx
@@ -2,7 +2,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 <Meta title="Core/Colour/Colour usage" />
 
-# Colour Usage
+# Colour usage
 
 - Purple is UQ’s identifying colour and should always lead.
 - Ensure the UQ colours are applied and reproduced consistently 
@@ -54,7 +54,7 @@ These are the most common text examples and usages.
 </tbody>
 </table>
 
-### Text Combinations
+### Text combinations
 
 <table class="uqds-table">
 <tbody class="uqds-table__body">
@@ -124,7 +124,7 @@ These are the most common text examples and usages.
   </tbody>
   </table>
 
-## Red Tints 
+## Red tints 
 
   <table class="uqds-table">
   <tbody class="uqds-table__body">
@@ -155,12 +155,12 @@ These are the most common text examples and usages.
   </tbody>
   </table>
 
-  ## Neutrals and Darks
+  ## Neutrals and darks
   Tints of our neutral tones can be used as a background colour.
 
   Recommended tints of the neutral tones are:
 
-  ### Neutral Tints and shades
+  ### Neutral tints and shades
   The Neutrals are created from a base of <code>$uq-neutral</code>
   <table class="uqds-table">
   <tbody class="uqds-table__body">
@@ -247,7 +247,7 @@ These are the most common text examples and usages.
   </tbody>
   </table>
 
-### Dark Grey Tints and Shades
+### Dark grey tints and shades
 
 The Dark Grey's are created from a base of <code>$uq-darkgrey</code>
 
